[tool.poetry]
name = "gitlabtree"
version = "0.1.0"
description = "CLI tool for gathering GitLab information in tree format"
authors = ["ubaumann <github@m.ubaumann.ch>"]
readme = "README.md"

[tool.poetry.scripts]
gitlabtree = "gitlabtree.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.6.1"
rich = "^12.5.1"
requests = "^2.28.1"
pydantic = "^1.9.1"
types-requests = "^2.28.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.6.0"
mypy = "^0.971"
pytest-cov = "^3.0.0"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.8"
plugins = "pydantic.mypy"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
disable = "R0903, W0511"
extension-pkg-whitelist = "pydantic"